<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pet_profile"
    android:gravity="center">


  <ImageButton
      android:id="@+id/imageButton5"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:background="@color/white"
      app:srcCompat="@drawable/baseline_keyboard_backspace_24" />

  <TextView
      android:padding="10dp"
      android:id="@+id/textView6"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/pet_info"
      android:textStyle="bold"
      android:textSize="15dp"
      android:gravity="center"
      />

  <ImageButton
      android:layout_below="@+id/textView6"
      android:id="@+id/imageView3"
      android:layout_marginLeft="120dp"
      android:layout_marginTop="20dp"
      android:layout_width="160dp"
      android:layout_height="160dp"
      android:src="@drawable/z4379150947117_8d298d97ffc5ccc9836b582386b43b7d" />


  <TextView
      android:layout_marginTop="15dp"
      android:layout_below="@+id/imageView3"
      android:id="@+id/textView7"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/pet_profile" />

  <TextView
      android:layout_below="@id/textView7"
      android:id="@+id/textView8"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/pet_name"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      />

  <EditText
      android:layout_below="@id/textView8"
      android:id="@+id/editTextText2"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:inputType="text"
/>

  <TextView
      android:layout_below="@+id/editTextText2"
      android:id="@+id/textView9"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="336dp"
      android:text="@string/pet_species" />

  <EditText
      android:layout_below="@+id/textView9"
      android:id="@+id/editTextText3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:inputType="text"
 />

  <TextView
      android:layout_below="@+id/editTextText3"
      android:id="@+id/textView10"
      android:layout_width="match_parent"
      android:layout_height="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:text="Giống"
 />

  <EditText
      android:layout_below="@+id/textView10"
      android:id="@+id/editTextText4"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:inputType="text"
 />



  <TextView
      android:layout_below="@+id/editTextText4"
      android:id="@+id/textView11"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/pet_weight"
/>

  <EditText
      android:layout_below="@+id/textView11"
      android:id="@+id/editTextNumber"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="11dp"
      android:inputType="number"
/>
  <TextView
      android:layout_below="@+id/editTextNumber"
      android:id="@+id/textView12"
      android:layout_width="62dp"
      android:layout_height="16dp"
      android:text="@string/pet_sex"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"

/>

  <RadioButton
      android:layout_below="@+id/textView12"
      android:id="@+id/radioButton"
      android:layout_width="93dp"
      android:layout_height="39dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/pet_male"
/>

  <RadioButton
      android:layout_below="@+id/textView12"
      android:layout_toRightOf="@+id/radioButton"
      android:id="@+id/radioButton2"
      android:layout_width="93dp"
      android:layout_height="39dp"
      android:layout_marginStart="56dp"
      android:text="@string/pet_female"
 />
  <TextView
      android:layout_below="@id/radioButton"
      android:id="@+id/textView13"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:text="@string/pet_date_of_birth" />

  <EditText
      android:layout_below="@+id/textView13"
      android:id="@+id/editTextDate"
      android:layout_width="match_parent"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_height="wrap_content"
      android:inputType="date"
/>

  <Button
      android:layout_below="@+id/editTextDate"
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="12dp"
      android:layout_marginStart="150dp"
      android:text="@string/update"
 />

</RelativeLayout>